--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/vercel": "^3.2.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
